Formularios de usuario terminados

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -9,6 +9,8 @@
     --text-a: #000;
     --text-b: #fff;
 
+    --red: #ff5555;
+
     /*font-family: Arial;*/
     font-family: 'Inter', sans-serif;
 } 
