--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -5,14 +5,18 @@
 
     --bg-active: #FFAB00;
     --bg-barhover: #111;
+    --bg-muffin-section: grey;
+    --bg-muffin-card: #002a3a;
 
     --text-a: #000;
     --text-b: #fff;
+    --text-muffin-card: #fff;
 
     --border-a: #434b57;
+    --border-muffin-img: #fff;
 
     --red: #ff5555;
-
+    --heart-focused: #ff5555;
     --a-link: #2edba5;
 
     /*tiempos de animaciones*/
